5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1756_1580.log
== TEST (2019-05-28 17:21:20) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = array(eval(input("Nome: ")))

cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while (vet1 == -1 or 0 >= vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:23:23) 
-- CODE:
from numpy import *

vet1 = float(eval(input("Nota: "))
vet2 = (eval(input("Nome: ")))

cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while (vet1 == -1 or 0 >= vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
File "XXXX", line 4
    vet2 = (eval(input()))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:23:32) 
-- CODE:
from numpy import *

vet1 = float(eval(input("Nota: "))
vet2 = eval(input("Nome: "))

cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while (vet1 == -1 or 0 >= vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
File "XXXX", line 4
    vet2 = eval(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:26:58) 
-- CODE:
from numpy import *

vet1 = float(eval(input("Nota: "))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while (vet1 == -1 or 0 >= vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
File "XXXX", line 4
    vet2 = input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:27:54) 
-- CODE:
from numpy import *

vet1 = float(eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while (vet1 == -1 or 0 >= vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:28:48) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while (vet1 == -1 or 0 >= vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:31:37) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while (vet1 == -1 or vet1 >= 0 or vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:32:41) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while (vet1 == -1 or vet1 >= 0 or vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:33:56) 
-- CODE:
from numpy import *

vet1 = float(eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while (vet1 == -1 or vet1 >= 0 or vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:35:02) 
-- CODE:
from numpy import *

vet1 = array (eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados


if(vet1 == -1):
	cont1 = cont + 1
	print(cont1)
else:
	if(vet1 >=6 and vet <=10):
	   cont2 = cont2 + 1
		print(cont2)
	else:
		if ( vet1 < 6 and vet1 >= 0):
			cont3 = cont3 + 1
			print(cont3)
			
-- ERROR:
File "XXXX", line 17
    print(cont2)
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:36:16) 
-- CODE:
from numpy import *

vet1 = array (eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados


if(vet1 == -1):
	cont1 = cont + 1
	print(cont1)
else:
	if(vet1 >=6 and vet <=10):
	   cont2 = cont2 + 1
		print(cont2)
	else:
		if ( vet1 < 6 and vet1 >= 0):
			cont3 = cont3 + 1
			print(cont3)
			
-- ERROR:
File "XXXX", line 17
    print(cont2)
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:36:37) 
-- CODE:
from numpy import *

vet1 = array (eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados


if(vet1 == -1):
	cont1 = cont + 1
	print(cont1)
else:
	if(vet1 >=6 and vet <=10):
		cont2 = cont2 + 1
		print(cont2)
	else:
		if ( vet1 < 6 and vet1 >= 0):
			cont3 = cont3 + 1
			print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:40:28) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while (vet1 == -1 or vet1 >= 0 or vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:42:57) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while a.all(vet1 == -1 or vet1 >= 0 or vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:43:40) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while vet1.all(vet1 == -1 or vet1 >= 0 or vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:04:07) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while(vet1.all == -1 or vet1.all >= 0 or vet1.all <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:09:29) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while np.all(vet1 == -1 or vet1 >= 0 or vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:09:52) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while np.all(vet1 == -1 or vet1 >= 0 or vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:10:26) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while np.all(vet1 == -1 or vet1 >= 0 or vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:08:53) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")
				 
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados

while (vet1 == -1 or vet1 >= 0 or vet1 <= 10):
	if(vet1 == -1):
		cont1 = cont + 1
		print(cont1)
	else:
		if(vet1 >=6 and vet <=10):
			cont2 = cont2 + 1
			print(cont2)
		else:
			if ( vet1 < 6 and vet1 >= 0):
				cont3 = cont3 + 1
				print(cont3)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:31:38) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")

i = 0
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados
cont4 = 0
e = 0
m = max(vet1)

while (i < len(vet1)):
	if vet1[i] == -1 :
		cont1 = cont1 + 1
	if vet1[i] >= 6 :
		cont2 = cont2 + 1
	if vet1[i] < 6 and vet1[i] >= 0 :
		cont3 = cont3 + 1
	if vet1[i] >= 0 :
		cont4 = cont4 + 1
		e = e + vet1[i]
	if m == vet1[i] :
		j = i
	i+=1
print(cont1)
print(cont2)
print(cont3)
print(round(e/cont4, 2))
print(vet2[j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:32:01) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")

i = 0
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados
cont4 = 0
e = 0
m = max(vet1)

while (i < len(vet1)):
	if vet1[i] == -1 :
		cont1 = cont1 + 1
	if vet1[i] >= 6 :
		cont2 = cont2 + 1
	if vet1[i] < 6 and vet1[i] >= 0 :
		cont3 = cont3 + 1
	if vet1[i] >= 0 :
		cont4 = cont4 + 1
		e = e + vet1[i]
	if m == vet1[i] :
		j = i
	i+=1
print(cont1)
print(cont2)
print(cont3)
print(round(e/cont4, 2))
print(vet2[j])
-- EXECUTION TIME:
0.416262
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
[
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
'
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:32:06) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")

i = 0
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados
cont4 = 0
e = 0
m = max(vet1)

while (i < len(vet1)):
	if vet1[i] == -1 :
		cont1 = cont1 + 1
	if vet1[i] >= 6 :
		cont2 = cont2 + 1
	if vet1[i] < 6 and vet1[i] >= 0 :
		cont3 = cont3 + 1
	if vet1[i] >= 0 :
		cont4 = cont4 + 1
		e = e + vet1[i]
	if m == vet1[i] :
		j = i
	i+=1
print(cont1)
print(cont2)
print(cont3)
print(round(e/cont4, 2))
print(vet2[j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:32:06) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")

i = 0
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados
cont4 = 0
e = 0
m = max(vet1)

while (i < len(vet1)):
	if vet1[i] == -1 :
		cont1 = cont1 + 1
	if vet1[i] >= 6 :
		cont2 = cont2 + 1
	if vet1[i] < 6 and vet1[i] >= 0 :
		cont3 = cont3 + 1
	if vet1[i] >= 0 :
		cont4 = cont4 + 1
		e = e + vet1[i]
	if m == vet1[i] :
		j = i
	i+=1
print(cont1)
print(cont2)
print(cont3)
print(round(e/cont4, 2))
print(vet2[j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:32:51) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = input("Nome: ")

i = 0
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados
cont4 = 0
e = 0
m = max(vet1)

while (i < len(vet1)):
	if vet1[i] == -1 :
		cont1 = cont1 + 1
	if vet1[i] >= 6 :
		cont2 = cont2 + 1
	if vet1[i] < 6 and vet1[i] >= 0 :
		cont3 = cont3 + 1
	if vet1[i] >= 0 :
		cont4 = cont4 + 1
		e = e + vet1[i]
	if m == vet1[i] :
		j = i
	i+=1
print(cont1)
print(cont2)
print(cont3)
print(round(e/cont4, 2))
print(vet2[j])
-- EXECUTION TIME:
0.563331
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
[
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
'
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:33:43) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = array(eval(input("Nota: ")))

i = 0
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados
cont4 = 0
e = 0
m = max(vet1)

while (i < len(vet1)):
	if vet1[i] == -1 :
		cont1 = cont1 + 1
	if vet1[i] >= 6 :
		cont2 = cont2 + 1
	if vet1[i] < 6 and vet1[i] >= 0 :
		cont3 = cont3 + 1
	if vet1[i] >= 0 :
		cont4 = cont4 + 1
		e = e + vet1[i]
	if m == vet1[i] :
		j = i
	i+=1
print(cont1)
print(cont2)
print(cont3)
print(round(e/cont4, 2))
print(vet2[j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:33:47) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = array(eval(input("Nota: ")))

i = 0
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados
cont4 = 0
e = 0
m = max(vet1)

while (i < len(vet1)):
	if vet1[i] == -1 :
		cont1 = cont1 + 1
	if vet1[i] >= 6 :
		cont2 = cont2 + 1
	if vet1[i] < 6 and vet1[i] >= 0 :
		cont3 = cont3 + 1
	if vet1[i] >= 0 :
		cont4 = cont4 + 1
		e = e + vet1[i]
	if m == vet1[i] :
		j = i
	i+=1
print(cont1)
print(cont2)
print(cont3)
print(round(e/cont4, 2))
print(vet2[j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:34:05) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Nota: ")))
vet2 = array(eval(input("Nota: ")))

i = 0
cont1 = 0 #variavel contadora de ausentes
cont2 = 0 #variavel contadora de aprovados
cont3 = 0 #variavel contadora de reprovados
cont4 = 0
e = 0
m = max(vet1)

while (i < len(vet1)):
	if vet1[i] == -1 :
		cont1 = cont1 + 1
	if vet1[i] >= 6 :
		cont2 = cont2 + 1
	if vet1[i] < 6 and vet1[i] >= 0 :
		cont3 = cont3 + 1
	if vet1[i] >= 0 :
		cont4 = cont4 + 1
		e = e + vet1[i]
	if m == vet1[i] :
		j = i
	i+=1
print(cont1)
print(cont2)
print(cont3)
print(round(e/cont4, 2))
print(vet2[j])
-- EXECUTION TIME:
0.52406
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
